--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Judulnya Ini Web</title>
   </head>
   <body>
-  hello, {{sebuah perubaha}}
+  hello, {{sebuah perubahan}} //membenarkan typo
   </body>
 </html>
