--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
   <head>
     <title>Judulnya Ini Web</title>
+	
   </head>
   <body>
-  hello, {{sebuah perubaha}}
+  hello, {{sebuah perubahan}}
+  @@hidden
+  
+  @@csrf
   </body>
 </html>
