--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 	
   </head>
   <body>
-
-  hello, {{sebuah perubahan}} //membenarkan typo
-  @@hidden
-  
-  @@csrf
+  <span>Ini adalah hasil edit wahib</span>
   </body>
 </html>
